[package]
name = "neotron_340st_bios"
version = "0.1.0"
authors = ["Jonathan 'theJPster' Pallant <github@thejpster.org.uk>"]
edition = "2018"
description = "BIOS for the Neotron-340ST"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/neotron-compute/Neotron-340ST-BIOS"

[[bin]]
name = "neotron_340st_bios"
test = false
bench = false

[profile.release]
lto = true
debug = true
codegen-units = 1
opt-level = "s"

[dependencies.stm32f7xx-hal]
version = "0.1.0"
features = ["rt", "stm32f746"]

[dependencies.embedded-hal]
version = "0.2"
features = ["unproven"]

[dependencies.cortex-m]
version = "0.6"

[dependencies.cortex-m-rt]
version = "0.6"

[dependencies.neotron_common_bios]
path = "./common"

[dependencies.embedded-sdmmc]
version = "0.3"

[dependencies.spin]
version = "0.5"
