[package]
name = "neotron-340st-bios"
version = "0.1.0"
authors = ["Jonathan 'theJPster' Pallant <github@thejpster.org.uk>"]
edition = "2018"
description = "BIOS for the Neotron-340ST"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/neotron-compute/Neotron-340ST-BIOS"

[[bin]]
name = "neotron-340st-bios"
test = false
bench = false

[profile.release]
lto = true
debug = true
codegen-units = 1
opt-level = "s"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
embedded-hal= { version = "0.2", features = ["unproven"] }
embedded-sdmmc = "0.3"
neotron-common-bios = { path = "./common" }
spin = "0.5"
stm32f7xx-hal = { version = "0.1.0", features = ["rt", "stm32f746"] }
nb = "*"